Fixed: Contact grid icons not aligned

--- a/src/css/index.scss
+++ b/src/css/index.scss
@@ -262,11 +262,14 @@ h1 {
 }
 
 #contact {
+    section {
+        text-align: center;
+    }
     ul {
         list-style: none;
-        display: flex;
+        display: inline-flex;
         flex-direction: column;
-        align-items: center;
+        align-items: flex-start;
     }
     a {
         display: inline-flex;
